styled 'jump to section' box and added jump2section for CA6 6.1

--- a/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.1-standard-data-types/2.1-standard-data-types.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.1-standard-data-types/2.1-standard-data-types.html
@@ -20,7 +20,7 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#2.1.1">2.1.1 - Know the definition of common data types and understand their purpose and when each is used</option>
+            <option value="#2.1.1">2.1.1 - Common data types and their purpose and when each is used</option>
         </select>
         <br>
         <input type="submit" value="Submit">
