--- a/main/html/content-areas/CA6 - Data/subtopic/6.1-data-information-and-knowledge/6.1-data-information-and-knowledge.html
+++ b/main/html/content-areas/CA6 - Data/subtopic/6.1-data-information-and-knowledge/6.1-data-information-and-knowledge.html
@@ -21,7 +21,11 @@
         <label for="sections">Jump to Section:</label>
         <select name="sections" id="sections">
             <option value="" disabled selected>Select a section</option>
-            <option value="#.1.1">.1.1 - </option>
+            <option value="#6.1.1"> 6.1.1 - Know and understand the differences and relationships between. </option>
+            <option value="#6.1.2"> 6.1.2 - Know and understand sources for generating data</option>
+            <option value="#6.1.3"> 6.1.3 - Know and understand ethical data practices & the metrics to determine the value of data.</option>
+            <option value="#6.1.4"> 6.1.4 - Understand how organisations use data and information </option>
+            <option value="#6.1.5"> 6.1.5 - Interrelationships and suitability in digital software development</option>
         </select>
         <br>
         <input type="submit" value="Submit">
@@ -29,8 +33,8 @@
 
     <main>
         <h2 class = "heading">Subtopic 6.1: Data, Information & Knowledge</h2>
-
-        <h4>6.1.1 Know and understand the differences and relationships between:</h4>
+        <section id="6.1.1">
+        <h4 class="top-sub-heading">6.1.1 Know and understand the differences and relationships between:</h4>
 
         <h4>Data</h4>
         <p>Data refers to raw, unprocessed facts and figures which, by themselves, have no inherent meaning. They can be numbers, words, symbols, or measurements collected from different sources. Without context or interpretation, data cannot be used effectively for decision-making.</p>
@@ -69,10 +73,11 @@
         </ul>
 
         <div class="example"><strong>Relationship:</strong> Data → Information → Knowledge. Data becomes information when processed and given meaning. Information leads to knowledge when applied with experience and understanding.</div>
+        </section>
 
-
-        <h4>6.1.2 Know and understand sources for generating data:</h4>
-
+        <section id="6.1.2">
+        <h4 class="sub-heading">6.1.2 Know and understand sources for generating data:</h4>
+            
         <h4>Humans: surveys, forms</h4>
         <p>Human-generated data comes from direct input provided by people. This can include surveys, questionnaires, and forms where individuals record their opinions, preferences, or demographic information. It is valuable because it captures personal perspectives and choices that machines cannot infer automatically.</p>
         <div class="example"><strong>Example:</strong> A customer satisfaction survey or an online registration form.</div>
@@ -121,9 +126,11 @@
             <li>Time and date of purchases.</li>
             <li>Items in shopping baskets or carts.</li>
         </ul>
+        </section>
 
 
-        <h4>6.1.3 Know and understand ethical data practices and the metrics to determine the value of data:</h4>
+        <section id="6.1.3">
+        <h4 class="sub-heading">6.1.3 Know and understand ethical data practices and the metrics to determine the value of data:</h4>
 
         <h4>Ethical data practices</h4>
         <p>Responsible organisations ensure that data collection, storage, and use respect the rights of individuals. Ethics in data is essential for trust, compliance with laws, and long-term sustainability.</p>
@@ -142,9 +149,11 @@
             <li><strong>Source:</strong> Data from reliable and verified sources is more valuable than unverified data.</li>
             <li><strong>Veracity:</strong> The trustworthiness and accuracy of data. High-veracity data reduces errors and improves confidence in decisions.</li>
         </ul>
+        </section>
 
 
-        <h4>6.1.4 Understand how organisations use data and information:</h4>
+        <section id="6.1.4">
+        <h4 class="sub-heading">6.1.4 Understand how organisations use data and information:</h4>
 
         <h4>Analysis to identify patterns</h4>
         <p>Organisations analyse large volumes of data to uncover trends and correlations. These insights guide decision-making, product development, and customer service improvements.</p>
@@ -180,9 +189,11 @@
             <li><strong>Threats:</strong> Competitor activity, cybersecurity vulnerabilities, regulatory compliance risks.</li>
             <li><strong>Opportunities:</strong> New markets, service improvements, customer expansion.</li>
         </ul>
+        </section>>
 
 
-        <h4>6.1.5 Interrelationships and suitability in digital software development</h4>
+        <section id="6.1.5">
+        <h4 class="sub-heading">6.1.5 Interrelationships and suitability in digital software development</h4>
 
         <p>In digital software development, data, information, and knowledge are interlinked. Each step in this chain impacts the quality of the final software product.</p>
         <ul>
@@ -207,6 +218,7 @@
             <li>Market and competitor data informs which new features to prioritise.</li>
             <li>If the data is biased, incomplete, or unreliable, the final product may fail to meet user needs or ethical standards.</li>
         </ul>
+        </section>>
 
     </main>
     
