changed icons for better uniformity and changed gradients on esp ones

--- a/main/html/index.html
+++ b/main/html/index.html
@@ -67,27 +67,27 @@
 
     <h2 id="ESP">Employer Set Project (ESP)</h2>
     <div class="content-area">
-       <a href="employer-set-project/pre-task/pre-task.html" class="main-topic">
+       <a href="employer-set-project/pre-task/pre-task.html" class="esp-topic">
         <img src="../images/pre-task.png" alt="Pre-Task" width="200" height="200"/>
         <h3>Pre-Task</h3>
       </a>
-       <a href="employer-set-project/Task 1-Planning-A-Project/Task1.html" class="main-topic">
+       <a href="employer-set-project/Task 1-Planning-A-Project/Task1.html" class="esp-topic">
         <img src="../images/task1.png" alt="Task1" width="200" height="200"/>
         <h3>Task 1: Planning A Project</h3>
       </a>
-       <a href="employer-set-project/Task 2-Debugging-Existing-Code/Task2.html" class="main-topic">
+       <a href="employer-set-project/Task 2-Debugging-Existing-Code/Task2.html" class="esp-topic">
         <img src="../images/task2.png" alt="Task2" width="200" height="200"/>
         <h3>Task 2: Debugging Existing Code</h3>
       </a>      
-       <a href="employer-set-project/Task 3-Designing-A-Solution/Task3.html" class="main-topic">
+       <a href="employer-set-project/Task 3-Designing-A-Solution/Task3.html" class="esp-topic">
         <img src="../images/task3.png" alt="Task3" width="200" height="200"/>
         <h3>Task 3: Designing A Solution</h3>
       </a>
-       <a href="employer-set-project/Task 4a-Developing-A-Solution/Task4a.html" class="main-topic">
+       <a href="employer-set-project/Task 4a-Developing-A-Solution/Task4a.html" class="esp-topic">
         <img src="../images/task4a.png" alt="Task4a" width="200" height="200"/>
         <h3>Task 4a: Developing A Solution</h3>
       </a>
-       <a href="employer-set-project/Task 4b-Reflection/Task4b.html" class="main-topic">
+       <a href="employer-set-project/Task 4b-Reflection/Task4b.html" class="esp-topic">
         <img src="../images/task4b.png" alt="Task4b" width="200" height="200"/>
         <h3>Task 4b: Reflection</h3>
       </a>
@@ -95,7 +95,7 @@
 
     <h2 id="Other"> Other </h2>
     <div class="content-area">
-      <a href="Other/About T-levels/About.html" class="main-topic">
+      <a href="Other/About T-levels/About.html" class="esp-topic">
           <img src="../images/about.png" alt="about" width="200" height="200"/>
           <h3>About The T-Level</h3>
       </a>
