--- a/main/html/content-areas/CA7 - Digital Environments/subtopic/7.1-Hardware/7.1-Hardware.html
+++ b/main/html/content-areas/CA7 - Digital Environments/subtopic/7.1-Hardware/7.1-Hardware.html
@@ -28,7 +28,335 @@
     </form>
  
     <main>
+        <h2 class="heading">Subtopic 7.1: Hardware</h2>
+
+        <h3 class="top-sub-heading" id="7.1.1">7.1.1 - Understand the features and use of different types of physical computers</h3>
+
+        <p>This section describes four main categories of physical computers: <strong>personal computers</strong>, <strong>mobile devices</strong> (smartphones & tablets), <strong>servers</strong>, and <strong>embedded devices</strong>. For each type we'll cover <em>features</em>, <em>typical uses</em>, and <em>advantages / limitations</em>.</p>
+
+        <h3>Personal Computers (PCs)</h3>
+
+        <h4>Features:</h4>
+        <ul>
+            <li>General-purpose machines available as <strong>desktops</strong> or <strong>laptops</strong>.</li>
+            <li>Key components: <strong>CPU</strong>, <strong>RAM</strong>, <strong>storage</strong> (HDD/SSD), <strong>GPU</strong> (optional), input/output devices (keyboard, mouse, display).</li>
+            <li>Runs desktop operating systems (e.g., Windows, macOS, Linux).</li>
+            <li>Often <strong>upgradeable</strong> (desktop more so than laptop).</li>
+            <li>Moderate to high computing power suitable for multitasking and heavier applications.</li>
+        </ul>
+
+        <h4>Uses:</h4>
+        <ul>
+            <li>Productivity: documents, spreadsheets, presentations.</li>
+            <li>Creative work: photo/video editing, design, software development.</li>
+            <li>Entertainment: gaming, streaming media.</li>
+            <li>Education, research, and general web browsing.</li>
+        </ul>
+
+        <div>
+            <h4>Advantages:</h4>
+            <ul>
+                <li><strong class="pros">Flexible</strong> and <strong class="pros">powerful</strong> for many tasks.</li>
+                <li>Wide software <strong class="pros">compatibility</strong>.</li>
+                <li><strong class="pros">Upgradeable</strong> hardware extends useful life.</li>
+            </ul>
+        </div>
+
+        <div>
+            <h4>Limitations:</h4>
+            <ul>
+                <li><strong class="cons">Less portable</strong> than mobile devices (desktops).</li>
+                <li>Laptops trade off <strong class="cons">upgradability</strong> and <strong class="cons">repairability</strong> for portability.</li>
+                <li><strong class="cons">Higher power consumption</strong> for high-performance models.</li>
+            </ul>
+        </div>
+
         
+        <h3>Mobile Devices (Smartphones & Tablets)</h3>
+
+        <h4>Features:</h4>
+        <ul>
+            <li>Portable, battery-powered devices with touchscreens.</li>
+            <li>Mobile operating systems (e.g., Android, iOS).</li>
+            <li>Integrated sensors: GPS, accelerometer, camera, microphone.</li>
+            <li>Built-in wireless connectivity (Wi-Fi, cellular 4G/5G, Bluetooth).</li>
+            <li>Often have system-on-chip (SoC) designs—compact and energy efficient.</li>
+        </ul>
+
+        <h4>Uses:</h4>
+        <ul>
+            <li>Communication: voice calls, messaging, video calls.</li>
+            <li>On-the-go internet access, social media, and apps.</li>
+            <li>Navigation, photography, media consumption.</li>
+            <li>Light productivity: email, notes, calendar, cloud apps.</li>
+        </ul>
+
+        <div>
+            <h4>Advantages:</h4>
+            <ul>
+                <li><strong class="pros">Highly portable</strong> - always with the user.</li>
+                <li><strong class="pros">Fast access</strong> to information and location-aware services.</li>
+                <li><strong class="pros">Large ecosystem</strong> of mobile apps.</li>
+            </ul>
+        </div>
+
+        <div>
+            <h4>Limitations:</h4>
+            <ul>
+                <li><strong class="cons">Less raw processing power</strong> than high-end PCs.</li>
+                <li><strong class="cons">Smaller screen</strong> and text entry constraints.</li>
+                <li><strong class="cons">Limited upgradeability</strong> and <strong class="cons">shorter hardware lifespan</strong> for some models.</li>
+            </ul>
+        </div>
+
+        <h3>Servers</h3>
+
+        <h4>Features:</h4>
+        <ul>
+            <li>Designed to provide services to multiple users or other computers over a network.</li>
+            <li>Server-grade hardware: multi-core CPUs, large memory capacity, redundant storage (RAID) and power supplies.</li>
+            <li>Optimized for reliability, availability, and scalability.</li>
+            <li>Typically run server operating systems and are housed in data centres or server rooms.</li>
+            <li>Often operate 24/7 and include advanced cooling and remote management features.</li>
+        </ul>
+
+        <h4>Uses:</h4>
+        <ul>
+            <li>Hosting websites, applications, and databases.</li>
+            <li>File and print services, authentication, and directory services.</li>
+            <li>Cloud infrastructure, virtualization, and container platforms.</li>
+            <li>Big data processing, enterprise applications, and backend services for mobile/web apps.</li>
+        </ul>
+
+        <div>
+            <h4>Advantages:</h4>
+            <ul>
+                <li><strong class="pros">High performance</strong> and capacity for many simultaneous users.</li>
+                <li>Designed for <strong class="pros">reliability</strong> and uptime.</li>
+                <li><strong class="pros">Scalable</strong> to meet growing demand (clustering, load balancing).</li>
+            </ul>
+        </div>
+
+        <div>
+            <h4>Limitations:</h4>
+            <ul>
+                <li><strong class="cons">High cost</strong> for hardware, maintenance, and energy (cooling/power).</li>
+                <li>Requires <strong class="cons">specialised administration</strong> and <strong class="cons">security management</strong>.</li>
+                <li>Not intended for <strong class="cons">direct end-user interaction</strong> (no built-in UI for casual use).</li>
+            </ul>
+        </div>
+
+        <h3>Embedded Devices</h3>
+
+        <h4>Features:</h4>
+        <ul>
+            <li>Specialised computing components integrated into larger systems (e.g., microcontrollers, SoCs).</li>
+            <li>Designed for a dedicated function or small set of functions.</li>
+            <li>Optimised for low power, small size, and long-term reliability.</li>
+            <li>Often have limited or no direct user interface — they run firmware rather than full desktop OSs.</li>
+            <li>Common in Internet of Things (IoT) devices, sensors and real-time systems.</li>
+        </ul>
+
+        <h4>Uses:</h4>
+        <ul>
+            <li>Control systems: appliances, industrial controllers, automotive ECU (engine control units).</li>
+            <li>Wearables, smart home devices, sensors, and medical instruments.</li>
+            <li>Appliances and consumer electronics (TVs, microwaves, washing machines).</li>
+            <li>Specialised tasks where reliability and low power are essential.</li>
+        </ul>
+
+        <div>
+            <h4>Advantages:</h4>
+            <ul>
+                <li><strong class="pros">Efficient</strong> and <strong class="pros">tailored</strong> to the task - minimal overhead.</li>
+                <li><strong class="pros">Low power consumption</strong> and <strong class="pros">small physical footprint</strong>.</li>
+                <li><strong class="pros">Cost-effective</strong> at scale for single-purpose functions.</li>
+            </ul>
+        </div>
+
+        <div>
+            <h4>Limitations:</h4>
+            <ul>
+                <li><strong class="cons">Limited processing headroom</strong>not suitable for general-purpose computing.</li>
+                <li>Often <strong class="cons">hard to update</strong> or patch (locked firmware or limited interfaces).</li>
+                <li><strong class="cons">Security</strong> can be a concern if <strong class="cons">not designed with updates and protections</strong> in mind.</li>
+            </ul>
+        </div>
+
+        <h3>Summary</h3>
+
+        <table class="summary-table">>
+            <thead>
+                <tr>
+                    <th>Type</th>
+                    <th>Key Features</th>
+                    <th>Typical Uses</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Personal Computers</td>
+                    <td>General-purpose, upgradeable, moderate-to-high power</td>
+                    <td>Productivity, creative work, gaming, education</td>
+                </tr>
+                <tr>
+                    <td>Mobile Devices</td>
+                    <td>Portable, touchscreen, battery-powered, sensors</td>
+                    <td>Communication, navigation, on-the-go apps, media</td>
+                </tr>
+                <tr>
+                    <td>Servers</td>
+                    <td>High-capacity, reliable, network-focused, 24/7 operation</td>
+                    <td>Hosting, databases, cloud services, enterprise apps</td>
+                </tr>
+                <tr>
+                    <td>Embedded Devices</td>
+                    <td>Specialised, low-power, firmware-driven</td>
+                    <td>Appliances, automotive systems, IoT sensors, controllers</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h4>Final notes:</h4>
+        <p>Choosing the right type of physical computer depends on the <strong>task</strong>, required <strong>performance</strong>, need for <strong>portability</strong>, and constraints like <strong>power</strong>, <strong>cost</strong>, and <strong>reliability</strong>. Many modern systems combine multiple types (e.g., mobile clients connecting to server backends; embedded controllers reporting to cloud servers).</p>
+
+        <h3 class="sub-heading" id="7.1.2">7.1.2 - Understand the features and use of different types of hardware devices</h3>
+
+        <p>This section explains the different categories of hardware devices and their features, along with how and why they are used in computing systems.</p>
+
+        <h3>Input Devices</h3>
+        <h4>Features:</h4>
+        <ul>
+            <li>Allow <strong>data and commands</strong> to be <strong>entered</strong> into a computer system.</li>
+            <li>Examples: keyboard, mouse, touchscreen, microphone, scanner.</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li><strong>Typing and navigation</strong> (keyboard & mouse).</li>
+            <li><strong>Capturing voice or images</strong> (microphone, camera, scanner).</li>
+            <li><strong>Interactive input</strong> (touchscreen, stylus).</li>
+        </ul>
+
+        <h3>Output Devices</h3>
+        <h4>Features:</h4>
+        <ul>
+            <li><strong>Display</strong> processed data from the <strong>computer to the user</strong>.</li>
+            <li>Examples: monitor, speakers, printers, VR headsets.</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li><strong>Visual display of information</strong> (monitors, projectors).</li>
+            <li><strong>Audio feedback</strong> (speakers, headphones).</li>
+            <li><strong>Permanent copies of documents</strong> (printers).</li>
+        </ul>
+
+        <h3>Processors (CPU)</h3>
+        <h4>Key Features:</h4>
+        <ul>
+            <li><strong>Number of Cores:</strong> Determines how many tasks can be processed simultaneously.</li>
+            <li><strong>Clock Speed:</strong> Measured in GHz, higher speeds mean more instructions per second.</li>
+            <li><strong>Cache Size:</strong> Small, high-speed memory close to the CPU for frequently used instructions/data.</li>
+            <li><strong>Mobile Processors:</strong> Optimised for low power consumption and thermal efficiency in portable devices.</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li><strong>General processing</strong> of instructions and data in all computing devices.</li>
+            <li>Multi-core processors for <strong>multitasking</strong> and <strong>parallel computing</strong>.</li>
+            <li>Mobile CPUs balance <strong>performance with long battery life</strong> in smartphones and tablets.</li>
+        </ul>
+
+        <h3>Main Memory</h3>
+        <h4>Types:</h4>
+        <ul>
+            <li><strong>RAM (Random Access Memory):</strong> Temporary, volatile memory used to store active programs and data.</li>
+            <li><strong>ROM (Read-Only Memory):</strong> Non-volatile memory storing essential instructions (e.g., BIOS/firmware).</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li>RAM allows quick read/write access for active processes.</li>
+            <li>ROM ensures that the system can boot and operate correctly.</li>
+        </ul>
+
+        <h3>Secondary Storage</h3>
+        <h4>Types:</h4>
+        <ul>
+            <li><strong>Magnetic:</strong> Hard disk drives (HDDs), high capacity but slower and mechanical.</li>
+            <li><strong>Solid State:</strong> SSDs, faster, no moving parts, more durable but costlier per GB.</li>
+            <li><strong>Optical:</strong> CDs, DVDs, Blu-ray discs, used for media distribution and backups.</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li>Permanent storage of operating systems, software, and user data.</li>
+            <li>Data backup and archiving.</li>
+        </ul>
+
+        <h3>Motherboard</h3>
+        <h4>Features:</h4>
+        <ul>
+            <li>Main circuit board that connects all components of the system.</li>
+            <li>Houses CPU socket, RAM slots, expansion slots, and connectors.</li>
+            <li>Provides communication pathways (buses) between components.</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li>Central hub for all hardware components to interact.</li>
+            <li>Supports system expandability with additional cards and storage.</li>
+        </ul>
+
+        <h3>Graphics Processing Units (GPUs)</h3>
+        <h4>Features:</h4>
+        <ul>
+            <li>Specialised processors designed to handle complex graphics and parallel tasks.</li>
+            <li>Dedicated memory (VRAM) for high-performance rendering.</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li>Rendering images, animations, and video.</li>
+            <li>Running modern games smoothly.</li>
+            <li>Accelerating AI, scientific simulations, and cryptocurrency mining.</li>
+        </ul>
+
+        <h3>Network Interface Devices</h3>
+        <h4>Types:</h4>
+        <ul>
+            <li><strong>PCI (Peripheral Component Interconnect):</strong> Expansion card interfaces for high-speed internal connections.</li>
+            <li><strong>USB (Universal Serial Bus):</strong> Widely used interface for external devices and networking adapters.</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li>Enable computers to connect to wired and wireless networks.</li>
+            <li>Expand connectivity options through add-on cards or adapters.</li>
+        </ul>
+
+        <h3>Cooling</h3>
+        <h4>Types:</h4>
+        <ul>
+            <li><strong>Air Cooling:</strong> Fans and heatsinks that dissipate heat using airflow.</li>
+            <li><strong>Liquid Cooling:</strong> Circulates liquid coolant to absorb and transfer heat away from components.</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li>Prevents overheating and maintains performance.</li>
+            <li>Essential for high-performance CPUs and GPUs.</li>
+            <li>Liquid cooling often used in gaming PCs and servers.</li>
+        </ul>
+
+        <h3>Sensors</h3>
+        <h4>Features:</h4>
+        <ul>
+            <li>Hardware components that detect and measure environmental conditions.</li>
+            <li>Examples: temperature sensors, accelerometers, gyroscopes, fingerprint scanners.</li>
+        </ul>
+        <h4>Uses:</h4>
+        <ul>
+            <li>System monitoring (temperature, voltage).</li>
+            <li>Mobile devices (screen rotation, step counting, biometrics).</li>
+            <li>IoT and embedded systems (automation and environmental sensing).</li>
+        </ul>
+
+        <h3>Summary</h3>
+        <p>Each hardware device plays a crucial role in enabling computer systems to <strong>input</strong>, <strong>process</strong>, <strong>store</strong>, and <strong>output</strong> data efficiently. Understanding their features helps in selecting the right components for specific tasks.</p>
+
     </main>
     
     <arrow-Nav>
